test/expressions/diten/uintBinaryOverflow.good
uintBinaryOverflow.chpl:1: syntax error: integer literal overflow: '0b10000000000000000000000000000000000000000000000000000000000000000' is too big for a 64-bit unsigned integer
